# GodotMCP-GDExtension

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  License  README-zh.md  README.md  README.zh-CN.md  build.py  i18n.json  main.py  package.json  package.py  package_addons.py  pnpm-lock.yaml  pyproject.toml  rspress.config.ts  test.py
crates/gdext/: Cargo.toml
crates/gdext/src/: dispatcher.rs  editor_plugin.rs  lib.rs  logging.rs
crates/gdext/src/commands/: collision.rs  editor_control.rs  find.rs  input_map.rs  meta.rs  mod.rs  node.rs  plugin_management.rs  project_settings.rs  project_settings_ext.rs  property.rs  property_3d.rs  scene.rs  script_cs.rs  script_gd.rs  script_helpers.rs  search.rs  undo.rs
crates/gdext/src/dock/: integration.rs  main_dock.rs  mod.rs  settings.rs  status_bar.rs  tool_manager.rs
crates/gdext/src/ipc/: mod.rs  plugin_state.rs  ws_server.rs
crates/gdext/src/lsp/: client.rs  mod.rs  protocol.rs
crates/server/: Cargo.toml
crates/server/src/: bridge.rs  handler.rs  lib.rs  main.rs  tool_registry.rs
crates/server/src/transports/: mod.rs
crates/server/tests/: e2e.rs
extensions/: CMakeLists.txt
extensions/gdext/: CMakeLists.txt
extensions/gdext/src/: editor_plugin.cpp  editor_plugin.hpp  logging.hpp  register_types.cpp
extensions/gdext/src/commands/: cmd_utils.cpp  cmd_utils.hpp  cmd_utils_json.cpp  collision.cpp  editor_control.cpp  find.cpp  handler_registry.cpp  handler_registry.hpp  input_map.cpp  meta.cpp  node.cpp  plugin_management.cpp  project_settings.cpp  project_settings_ext.cpp  property.cpp  property_3d.cpp  scene.cpp  script_cs.cpp  script_gd.cpp  script_helpers.cpp  search.cpp  undo.cpp
extensions/gdext/src/ipc/: http_server.cpp  http_server.hpp  ws_server.cpp  ws_server.hpp
extensions/gdext/src/lsp/: client.cpp
extensions/gdext/src/mcp/: mcp_handler.cpp  mcp_handler.hpp
extensions/gdext/src/protocol/: ipc_types.hpp
extensions/src/: client_config_registry.hpp  client_registry.hpp  editor_plugin.cpp  editor_plugin.hpp  logging.hpp  pch.hpp  refactor_casts.py  register_types.cpp
extensions/src/built_in/: cmd_info.cpp  cmd_meta_tools.cpp  cmd_utils.cpp  cmd_utils.hpp  cmd_utils_json.cpp  collision.cpp  editor_control.cpp  find.cpp  generated_registration.cpp  input_map.cpp  node.cpp  plugin_management.cpp  project_settings.cpp  project_settings_ext.cpp  property.cpp  property_3d.cpp  register_itools.cpp  scene.cpp  screenshot_utils.hpp  script_cs.cpp  script_gd.cpp  script_helpers.cpp  search.cpp  tool_adapter.cpp  tool_adapter.hpp  tool_base.cpp  tool_base.hpp  undo.cpp
extensions/src/built_in/cmd_utils/: args_get_typed.hpp  dispatch_map.hpp  error_codes.hpp  memdelete_guard.hpp  schema_builder.hpp  tracked_settings.hpp  undo_helpers.hpp  undo_stack.hpp
extensions/src/built_in/tools/collision/: add_circle_collision.hpp  add_rectangle_collision.hpp  collision_helpers.hpp
extensions/src/built_in/tools/editor_control/: get_editor_info.hpp  godot_editor_restart.hpp  is_scene_playing.hpp  play_current_scene.hpp  play_main_scene.hpp  refresh_filesystem.hpp  stop_scene.hpp
extensions/src/built_in/tools/find/: find_nodes_by_group.hpp  find_nodes_by_name.hpp  find_nodes_by_script.hpp  find_nodes_by_type.hpp
extensions/src/built_in/tools/group/: add_to_group.hpp  get_node_groups.hpp  get_nodes_in_group.hpp  remove_from_group.hpp
extensions/src/built_in/tools/input_map/: add_input_action.hpp  input_map_helpers.hpp  list_input_actions.hpp  remove_input_action.hpp  set_input_action_events.hpp
extensions/src/built_in/tools/meta/: call_tool.hpp  execute_workflow.hpp  find_tool.hpp  generate_client_config.hpp  get_categories.hpp  get_info.hpp  get_tool_detail.hpp  get_tool_schema.hpp  get_tools.hpp  get_undo_history.hpp  godot_info.hpp  list_tool_categories.hpp  (+3 more)
extensions/src/lsp/: client.hpp
extensions/src/pipeline/: pipeline_context.cpp  pipeline_context.hpp  pipeline_parser.cpp  pipeline_parser.hpp  pipeline_runner_base.cpp  pipeline_runner_base.hpp  pipeline_types.hpp  test_parser.cpp  test_parser.hpp  type_utils.hpp  workflow_parser.cpp  workflow_parser.hpp  workflow_runner.cpp  workflow_runner.hpp  yaml_parser.hpp
extensions/src/plugin/: test_runner_dock.cpp  test_runner_dock.hpp
extensions/src/replay/: operation_recorder.cpp  operation_recorder.hpp  operation_replay.cpp  operation_replay.hpp  replay_tools.cpp  replay_tools.hpp
extensions/src/runtime/: bridge.cpp  bridge.hpp  bridge_server.cpp  bridge_server.hpp  game_bridge.cpp  game_bridge.hpp
extensions/src/scene_diff/: diff_scene_states.cpp  diff_scene_states.hpp  scene_diff.cpp  scene_diff.hpp  scene_diff_detail.hpp  scene_patcher.cpp  scene_patcher.hpp  scene_shadow.cpp  scene_shadow.hpp  scene_snapshot.cpp  scene_snapshot.hpp
extensions/src/sdk/: mcp_tool_adapter.hpp  mcp_tool_definition.cpp  mcp_tool_definition.hpp  mcp_tool_registry.cpp  mcp_tool_registry.hpp
extensions/src/server/ipc/: http_connection.cpp  http_parser.cpp  http_server.cpp  http_server.hpp  http_sse.cpp  test_http_handler.hpp
extensions/src/server/mcp/: mcp_handler.cpp  mcp_handler.hpp  pending_operation.hpp  prompt_provider.cpp  prompt_provider.hpp  tool_executor.cpp  tool_executor.hpp
extensions/src/server/registry/: handler_registry.cpp  handler_registry.hpp  search_engine.cpp  search_engine.hpp
extensions/src/testing/: godot_file_verifier.hpp  pipeline_context.cpp  pipeline_context.hpp  pipeline_parser.cpp  pipeline_runner.cpp  pipeline_runner.hpp  pipeline_types.hpp  test_assertions.hpp  test_engine.cpp  test_engine.hpp  test_runner.cpp  test_runner.hpp  type_utils.hpp  yaml_parser.hpp
extensions/src/ui/: mcp_confirm_dialog.cpp  mcp_confirm_dialog.hpp  mcp_console.cpp  mcp_console.hpp  mcp_dock.cpp  mcp_dock.hpp  mcp_logger.cpp  mcp_logger.hpp
server/: entry.py  entry.pyx  pyproject.toml
server/src/godot_mcp_server/: bridge.py  editor_ctl.py  handler.py  protocol.py  registry.py
server/tests/: test_bridge.py  test_editor_ctl.py  test_handler.py  test_protocol.py
server/tools/: extract_schemas.py  patch_entry_c.py
(+1428 files in other folders)
