[build-system]
requires = ["setuptools>=61", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp"
description = "MCP server for Godot Engine integration"
version = "0.1.5-dev2"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27",
    "websockets>=14",
]

[dependency-groups]
dev = [
    "cython>=3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
packages = { find = { where = ["server/src"] } }

[tool.setuptools.package-data]
godot_mcp_server = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["server/tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C", "N"]
ignore = [
    "E501",
    "B008",
]
target-version = "py313"
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    ".git",
    "target",
    "build",
]

[tool.ruff.lint]
fixable = ["A", "B", "C", "E", "F", "I", "N", "W"]
fix = false

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.cython]
compiler-directives = { language_level = "3" }

[tool.coverage.run]
source = ["server/src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.uv]
package = true