[project]
name = "godot-mcp-server"
version = "0.1.4"
description = "MCP server for Godot Engine integration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "websockets>=14",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
# When adding Cython extension modules (.pyx), add "cython>=3.0" above
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "cython>=3.2.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
godot_mcp_server = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
