[package]
name = "godot-mcp-gdext"
version.workspace = true
edition.workspace = true

[lib]
name = "godot_mcp_gdext"
crate-type = ["cdylib"]

[package.metadata.godot]
extension-library.name = "godot_mcp_gdext"

[dependencies]
godot = { version = "=0.5", features = ["default"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = "1"
serde_json = "1"
anyhow = "1"
regex = "1"
godot-mcp-core = { path = "../core" }