[package]
name = "godot-mcp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "godot-mcp-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
