[package]
name = "godot-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "godot-mcp-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
async-trait = "0.1"
rmcp = { version = "=1.7", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
godot-mcp-core = { path = "../core" }